# hermes-domain-manager

./: .gitignore  LICENSE  README.md  README_CN.md  SKILL.md  pyproject.toml
domain_watch/: __init__.py  cli.py  monitor.py
domain_watch/providers/: cloudflare.py  namecheap.py
hermes_domain_manager/: cli.py  monitor.py
hermes_domain_manager/providers/: __init__.py  base.py  godaddy.py
scripts/: cron-check.py
