[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-watch"
version = "1.0.0"
description = "Multi-registrar domain management for Hermes Agent — Namecheap, GoDaddy, Cloudflare & more"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tim Wynter", email = "tim@monah.ai" }]
keywords = ["domain", "dns", "namecheap", "godaddy", "cloudflare", "registrar", "hermes-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/timwynter/domain-watch"
Repository = "https://github.com/timwynter/domain-watch"
Issues = "https://github.com/timwynter/domain-watch/issues"

[project.scripts]
domain-watch = "domain_watch.cli:main"

[tool.setuptools.packages.find]
include = ["domain_watch*"]
