[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-domain-manager"
version = "1.0.0"
description = "Multi-registrar domain management for Hermes Agent — Namecheap, GoDaddy, Cloudflare & more"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tim Wynter", email = "tim@monah.ai" }]
keywords = ["domain", "dns", "namecheap", "godaddy", "cloudflare", "registrar", "hermes-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/timwynter/hermes-domain-manager"
Repository = "https://github.com/timwynter/hermes-domain-manager"
Issues = "https://github.com/timwynter/hermes-domain-manager/issues"

[project.scripts]
hermes-domain-manager = "hermes_domain_manager.cli:main"

[tool.setuptools.packages.find]
include = ["hermes_domain_manager*"]
